Add outline for git training

--- a/index.html
+++ b/index.html
@@ -25,8 +25,81 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+			    <section>
+				<h1>Introduction to Git (and GitHub)</h1>
+			    </section>
+			    <section>
+				<h2>Forking a repository on GitHub</h2>
+			    </section>
+			    <section>
+				<h2>Creating a local clone</h2>
+			    </section>
+			    <section>
+				<h2>Viewing the log</h2>
+			    </section>
+			    <section>
+				<h2>Viewing status</h2>
+			    </section>
+			    <section>
+				<h2>Viewing differences</h2>
+			    </section>
+			    <section>
+				<h2>Staging a change</h2>
+			    </section>
+			    <section>
+				<h2>Committing a change</h2>
+			    </section>
+			    <section>
+				<h2>Pushing a change</h2>
+			    </section>
+			    <section>
+				<h2>Pulling changes</h2>
+			    </section>
+			    <section>
+				<h2>Creating a branch</h2>
+			    </section>
+			    <section>
+				<h2>Pushing a branch</h2>
+			    </section>
+			    <section>
+				<h2>Creating a pull request on GitHub</h2>
+			    </section>
+			    <section>
+				<h2>Merging a pull request on GitHub</h2>
+			    </section>
+			    <section>
+				<h2>Adding a remote repository</h2>
+			    </section>
+			    <section>
+				<h2>Fetching changes from a remote</h2>
+			    </section>
+			    <section>
+				<h2>Checking out a remote branch</h2>
+			    </section>
+			    <section>
+				<h2>Rebasing a branch</h2>
+			    </section>
+			    <section>
+				<h2>Merging a branch</h2>
+			    </section>
+			    <section>
+				<h2>Deleting a branch</h2>
+			    </section>
+			    <section>
+				<h2>GitHub work flow</h2>
+			    </section>
+			    <section>
+				<h2>Creating a tag</h2>
+			    </section>
+			    <section>
+				<h2>Viewing tags</h2>
+			    </section>
+			    <section>
+				<h2>Comparison between Git and MKS</h2>
+			    </section>
+			    <section>
+				<h2>Where to find this presentation</h2>
+			    </section>
 			</div>
 		</div>
 
