--- a/index.html
+++ b/index.html
@@ -30,22 +30,33 @@
                             </section>
                             <section>
                                 <h1>Prerequisites</h1>
-                                <ol>
-                                    <li>Download and install Git from:
-                                        <ul>
-                                            <li>
-                                                <a href="https://git-scm.com/download/win">
-                                                    https://git-scm.com/download/win</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>Run Git Bash</li>
-                                </ol>
+                                <section>
+                                    <ol>
+                                        <li>Create an account on <a href="https://github.com">github.com</a></li>
+                                        <li>Choose "Free Plan".</li>
+                                        <li>You will need to verify your email address.</li>
+                                        <li>If you use a mobile device to verify your email address,
+                                            you will also need to verify that mobile device.</li>
+                                    </ol>
+                                </section>
+                                <section>
+                                    <ol>
+                                        <li>Download and install Git from:
+                                            <ul>
+                                                <li>
+                                                    <a href="https://git-scm.com/download/win">
+                                                        https://git-scm.com/download/win</a>
+                                                </li>
+                                                <li>The default options are ok.</li>
+                                            </ul>
+                                        </li>
+                                        <li>Run "Git Bash" from Start Menu</li>
+                                    </ol>
+                                </section>
                             </section>
                             <section>
-                                <h2>Forking a repository on GitHub</h2>
+                                <h2>Forking a repository</h2>
                                 <ol>
-                                    <li>Create an account on github.com</li>
                                     <li>Fork this repository:
                                         <ul>
                                             <li>
@@ -54,13 +65,17 @@
                                             </li>
                                         </ul>
                                     </li>
+                                    <img src="github-fork.png" /><br />
+                                    <img src="github-forked.png" />
                                 </ol>
                             </section>
                             <section>
                                 <h2>Creating a local clone</h2>
                                 <ol>
                                     <li>git clone https://github.com/username/git-training.git</li>
+                                    <img src="git-clone.png" />
                                     <li>cd git-training</li>
+                                    <img src="git-cloned.png" />
                                 </ol>
                             </section>
                             <section>
@@ -68,14 +83,9 @@
                                 <ol>
                                     <li>Open index.html in text editor.</li>
                                     <li>Change the title of this presentation.</li>
+                                    <!-- TODO: Add screenshot of editing the file -->
                                     <li>Save the modified file.</li>
                                     <li>git add index.html</li>
-                                </ol>
-                            </section>
-                            <section>
-                                <h2>Committing a change</h2>
-                                <ol>
-                                    <li>git commit -m "Change slide text"</li>
                                 </ol>
                             </section>
                             <section>
@@ -87,6 +97,28 @@
                                 <img src="git-status.png" />
                             </section>
                             <section>
+                                <h2>Viewing local differences</h2>
+                                <ol>
+                                    <li>git diff</li>
+                                </ol>
+                                <!-- TODO: Add screenshot of local change -->
+                            </section>
+                            <section>
+                                <h2>Viewing local staged differences</h2>
+                                <ol>
+                                    <li>git diff --staged</li>
+                                </ol>
+                                <!-- TODO: Add screenshot of staged change -->
+                            </section>
+                            <section>
+                                <h2>Committing a change</h2>
+                                <ol>
+                                    <li>git commit -m "Change slide text"</li>
+                                </ol>
+                                <br />
+                                <img src="git-commit.png" />
+                            </section>
+                            <section>
                                 <h2>Viewing the log</h2>
                                 <ul>
                                     <li>git log</li>
@@ -95,34 +127,36 @@
                                 <img src="git-log.png" />
                             </section>
                             <section>
-                                <h2>Viewing differences</h2>
+                                <h2>Viewing differences to remote</h2>
                                 <ol>
                                     <li>git diff origin/git-training</li>
                                 </ol>
+                                <!-- TODO: Add screenshot of diff to remote -->
                             </section>
                             <section>
                                 <h2>Pushing a change</h2>
                                 <ol>
-                                    <li>git push origin/git-training</li>
+                                    <li>git push origin git-training</li>
                                 </ol>
+                                <!-- TODO: Add screenshot of push action -->
                             </section>
                             <section>
                                 <h2>Creating a branch</h2>
                                 <ol>
                                     <li>git checkout -b fix-spelling-errors</li>
                                 </ol>
+                                <!-- TODO: Add screenshot of creating branch -->
                             </section>
                             <section>
                                 <h2>Pushing a branch</h2>
                                 <ol>
-                                    <li>git push origin/fix-spelling-errors</li>
+                                    <li>git push origin fix-spelling-errors</li>
                                 </ol>
+                                <!-- TODO: Add screenshot of push action -->
                             </section>
                             <section>
                                 <h2>Creating a pull request on GitHub</h2>
-                            </section>
-                            <section>
-                                <h2>Merging a pull request on GitHub</h2>
+                                <!-- TODO: Add screenshot of pull request -->
                             </section>
                             <section>
                                 <h2>Adding a remote repository</h2>
@@ -151,6 +185,7 @@
                             <section>
                                 <h2>Rebasing a branch</h2>
                                 <ol>
+                                    <li>git checkout git-training</li>
                                     <li>git rebase upstream-master</li>
                                 </ol>
                             </section>
@@ -163,8 +198,11 @@
                             <section>
                                 <h2>Deleting a branch</h2>
                                 <ol>
-                                    <li>git branch -D upstream-master</li>
+                                    <li>git branch -D fix-spelling-errors</li>
                                 </ol>
+                            </section>
+                            <section>
+                                <h2>Merging a pull request on GitHub</h2>
                             </section>
                             <section>
                                 <h2>GitHub work flow</h2>
@@ -177,9 +215,6 @@
                             </section>
                             <section>
                                 <h2>Comparison between Git and MKS</h2>
-                            </section>
-                            <section>
-                                <h2>Where to find this presentation</h2>
                             </section>
                         </div>
                 </div>
