--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
                                 <ol>
                                     <li>Open index.html in text editor.</li>
                                     <li>Change the title of this presentation.</li>
-                                    <!-- TODO: Add screenshot of editing the file -->
                                     <li>Save the modified file.</li>
                                 </ol>
+                                <br />
+                                <img src="edit-file.png" />
                             </section>
                             <section>
                                 <h2>Viewing status</h2>
