Add staging and update commit

--- a/index.html
+++ b/index.html
@@ -115,16 +115,17 @@
                             </section>
                             <section>
                                 <h2>Viewing local staged differences</h2>
-                                <ol>
+                                <ul>
                                     <li>git diff --staged</li>
-                                </ol>
-                                <!-- TODO: Add screenshot of staged change -->
+                                </ul>
+                                <br />
+                                <img src="git-diff-staged.png" />
                             </section>
                             <section>
                                 <h2>Committing a change</h2>
-                                <ol>
+                                <ul>
                                     <li>git commit -m "Change slide text"</li>
-                                </ol>
+                                </ul>
                                 <br />
                                 <img src="git-commit.png" />
                             </section>
