Add diff to remote

--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
                             </section>
                             <section>
                                 <h2>Viewing differences to remote</h2>
-                                <ol>
+                                <ul>
                                     <li>git diff origin/git-training</li>
-                                </ol>
-                                <!-- TODO: Add screenshot of diff to remote -->
+                                </ul>
+                                <br />
+                                <img src="git-diff-remote.png" />
                             </section>
                             <section>
                                 <h2>Pushing a change</h2>
