--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@
                             </section>
                             <section>
                                 <h2>Pushing a change</h2>
-                                <ol>
-                                    <li>git push origin git-training</li>
-                                </ol>
-                                <!-- TODO: Add screenshot of push action -->
+                                <ul>
+                                    <li>git push</li>
+				</ul>
+				<br />
+				<img src="git-push.png" />
                             </section>
                             <section>
                                 <h2>Creating a branch</h2>
