Add checkout, fetch, push, add remote

--- a/index.html
+++ b/index.html
@@ -149,51 +149,57 @@
                                 <h2>Pushing a change</h2>
                                 <ul>
                                     <li>git push</li>
-				</ul>
-				<br />
-				<img src="git-push.png" />
+                                </ul>
+                                <br />
+                                <img src="git-push.png" />
                             </section>
                             <section>
                                 <h2>Creating a branch</h2>
-                                <ol>
+                                <ul>
                                     <li>git checkout -b fix-spelling-errors</li>
-                                </ol>
-                                <!-- TODO: Add screenshot of creating branch -->
+                                </ul>
+                                <br />
+                                <img src="git-checkout-b.png" />
                             </section>
                             <section>
                                 <h2>Pushing a branch</h2>
-                                <ol>
+                                <ul>
                                     <li>git push origin fix-spelling-errors</li>
-                                </ol>
-                                <!-- TODO: Add screenshot of push action -->
+                                </ul>
+                                <br />
+                                <img src="git-push-new-branch.png" />
                             </section>
                             <section>
                                 <h2>Creating a pull request on GitHub</h2>
-                                <!-- TODO: Add screenshot of pull request -->
+                                <img src="pull-request.png" />
                             </section>
                             <section>
                                 <h2>Adding a remote repository</h2>
-                                <ol>
+                                <ul>
                                     <li>git remote add upstream https://github.com/hakimel/reveal.js.git</li>
-                                </ol>
+                                </ul>
+                                <br />
+                                <img src="git-remote-add.png" />
                             </section>
                             <section>
                                 <h2>Fetching changes from a remote</h2>
-                                <ol>
+                                <ul>
                                     <li>git fetch upstream</li>
-                                </ol>
+                                </ul>
+                                <br />
+                                <img src="git-fetch.png" />
                             </section>
                             <section>
                                 <h2>Pulling changes</h2>
-                                <ol>
-                                    <li>git pull origin/git-training</li>
-                                </ol>
+                                <ul>
+                                    <li>git pull origin git-training</li>
+                                </ul>
                             </section>
                             <section>
                                 <h2>Checking out a remote branch</h2>
-                                <ol>
+                                <ul>
                                     <li>git checkout -b upstream-master upstream/master</li>
-                                </ol>
+                                </ul>
                             </section>
                             <section>
                                 <h2>Rebasing a branch</h2>
@@ -204,15 +210,15 @@
                             </section>
                             <section>
                                 <h2>Merging a branch</h2>
-                                <ol>
+                                <ul>
                                     <li>git merge upstream-master</li>
-                                </ol>
+                                </ul>
                             </section>
                             <section>
                                 <h2>Deleting a branch</h2>
-                                <ol>
+                                <ul>
                                     <li>git branch -D fix-spelling-errors</li>
-                                </ol>
+                                </ul>
                             </section>
                             <section>
                                 <h2>Merging a pull request on GitHub</h2>
