--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
                                 <ul>
                                     <li>git pull origin git-training</li>
                                 </ul>
+                                <br />
+                                <img src="git-pull.png" />
                             </section>
                             <section>
                                 <h2>Checking out a remote branch</h2>
