--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                                 <ul>
                                     <li>git checkout -b upstream-master upstream/master</li>
                                 </ul>
+                                <br />
+                                <img src="git-checkout-remote.png" />
                             </section>
                             <section>
                                 <h2>Rebasing a branch</h2>
