--- a/index.html
+++ b/index.html
@@ -211,11 +211,13 @@
                                     <li>git checkout git-training</li>
                                     <li>git rebase upstream-master</li>
                                 </ol>
+                                <br />
+                                <img src="git-rebase.png" />
                             </section>
                             <section>
                                 <h2>Merging a branch</h2>
                                 <ul>
-                                    <li>git merge upstream-master</li>
+                                    <li>git merge fix-spelling-errors</li>
                                 </ul>
                             </section>
                             <section>
