--- a/index.html
+++ b/index.html
@@ -237,10 +237,13 @@
                                 <h2>GitHub work flow</h2>
                             </section>
                             <section>
-                                <h2>Creating a tag</h2>
-                            </section>
-                            <section>
-                                <h2>Viewing tags</h2>
+                                <h2>Creating and viewing tags</h2>
+                                <ul>
+                                    <li>git tag release-1</li>
+                                    <li>git tag</li>
+                                </ul>
+                                <br />
+                                <img src="git-tag.png" />
                             </section>
                             <section>
                                 <h2>Comparison between Git and MKS</h2>
