--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="reveal">
                         <div class="slides">
                             <section>
-                                <h1>Introduction</h1>
+                                <h1>Bevezeto</h1>
                             </section>
                             <section>
                                 <h1>Prerequisites</h1>
