--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <h1>Bevezeto</h1>
                             </section>
                             <section>
-                                <h1>Prerequisites</h1>
+                                <h1>Elofeltetelek</h1>
                                 <section>
                                     <ol>
                                         <li>Create an account on <a href="https://github.com">github.com</a></li>
